@@ -313,6 +313,8 @@ const char *RFX_Type_Desc(const unsigned char i, const unsigned char snum)
 		{ pTypeRego6XXValue, "Value" , "utility" },
 		{ pTypeAirQuality, "Air Quality" , "air" },
 		{ pTypeUsage, "Usage" , "current" },
+		{ pTypeTEMP_BARO, "Temp + Baro" , "temperature" },
+		
 		{  0,NULL,NULL }
 	};
 	if (snum==1)
@@ -466,6 +468,9 @@ const char *RFX_Type_SubType_Desc(const unsigned char dType, const unsigned char
 		{ pTypeAirQuality, sTypeVoltcraft, "Voltcraft CO-20" },
 
 		{ pTypeUsage, sTypeElectric, "Electric" },
+
+		{ pTypeTEMP_BARO, sTypeBMP085, "BMP085 I2C" },
+		
 
 		{  0,0,NULL }
 	};
